src/main/java/hu/mondokm/ltlverif/antlr/XSTSGrammar.g4
grammar XSTSGrammar;

xsts:
    typeDeclarations+=typeDeclaration (typeDeclarations+=typeDeclaration)*
    variableDeclarations+=variableDeclaration (variableDeclarations+=variableDeclaration)*
    transitions=nonDetAction
    initAction=nonDetAction;

action:
    assumeAction|
    assignAction|
    nonDetAction
    ;

nonDetAction:
    CHOICE LCURLY choices+=sequentialAction RCURLY (NONDET_OR LCURLY choices+=sequentialAction RCURLY)*
;

sequentialAction:
    actions+=action (actions+=action)*;

assumeAction:
    ASSUME buchiAction=implyExpression SEMICOLON;

assignAction:
    lhs=assignLHS ASSIGN rhs=implyExpression SEMICOLON;

assignLHS:
    name=ID PRIME*;

implyExpression:
	ops+=orExpr (IMPLIES ops+=orExpr)?
;

orExpr:
	ops+=andExpr (OR ops+=andExpr)*
;

andExpr:
	ops+=notExpr (AND ops+=notExpr)*
;

notExpr:
	eqExpr|
	NOT ops+=notExpr
;

eqExpr:
	ops+=relationExpr (oper=eqOperator ops+=relationExpr)?
;

eqOperator:
	EQ|NEQ
;

relationExpr:
	ops+=additiveExpr (oper=relationOperator ops+=additiveExpr)?
;

relationOperator:
	LT|GT|LEQ|GEQ
;

additiveExpr:
	ops+=multiplicativeExpr (opers+=additiveOperator ops+=multiplicativeExpr)*
;

additiveOperator:
	PLUS|MINUS
;

multiplicativeExpr:
	ops+=negExpr (opers+=multiplicativeOperator ops+=negExpr)*
;

multiplicativeOperator:
	MUL|DIV|MOD
;

negExpr:
	primaryExpr|
	MINUS ops+=negExpr
;

primaryExpr:
	value|
	parenExpr
;

parenExpr:
	LPAREN ops+=implyExpression RPAREN | prime
;

prime:
    reference | ref=prime PRIME;

variableDeclaration:
    VAR name=ID DP type=typeName (EQUALS initValue=value)?;

value:
    literal|reference;

literal:
    INTLIT|BOOLLIT
    ;

reference:
    name=ID;

typeName:
    INT|BOOL|customType;

customType:
    name=ID;

typeDeclaration:
    TYPE name=ID DP LCURLY literals+=typeLiteral (COMMA literals+=typeLiteral)* RCURLY;

typeLiteral:
    name=ID;

CHOICE: 'choice';
NONDET_OR: 'or';
SEMICOLON: ';';
ASSUME: 'assume';
AND: '&&';
OR: '||';
IMPLIES: '->';
NOT: '!';
EQ: '==';
NEQ: '!=';
LT: '<';
GT: '>';
LEQ: '<=';
GEQ: '>=';
PLUS: '+';
MINUS: '-';
MUL: '*';
DIV: '/';
MOD: '%';
LPAREN: '(';
RPAREN: ')';
PRIME: '\'';
ASSIGN: ':=';
EQUALS: '=';
VAR: 'var';
INT: 'integer';
BOOL: 'boolean';
DP: ':';
COMMA: ',';
TYPE: 'type';
LCURLY: '{';
RCURLY: '}';
INTLIT: [0-9]+;
BOOLLIT: 'true' | 'false';
ID: [a-zA-Z_][a-zA-Z0-9_]*;
WS: (' '| '\t' | '\n' | '\r') -> skip;
