src/main/gen/hu/mondokm/ltlverif/antlr/XSTSGrammarParser.java
// Generated from /home/milan/programming/ltlverif/src/main/java/hu/mondokm/ltlverif/antlr/XSTSGrammar.g4 by ANTLR 4.7.2
package hu.mondokm.ltlverif.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XSTSGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CHOICE=1, NONDET_OR=2, SEMICOLON=3, ASSUME=4, AND=5, OR=6, IMPLIES=7, 
		NOT=8, EQ=9, NEQ=10, LT=11, GT=12, LEQ=13, GEQ=14, PLUS=15, MINUS=16, 
		MUL=17, DIV=18, MOD=19, LPAREN=20, RPAREN=21, PRIME=22, ASSIGN=23, EQUALS=24, 
		VAR=25, INT=26, BOOL=27, DP=28, COMMA=29, TYPE=30, LCURLY=31, RCURLY=32, 
		INTLIT=33, BOOLLIT=34, ID=35, WS=36;
	public static final int
		RULE_xsts = 0, RULE_action = 1, RULE_nonDetAction = 2, RULE_sequentialAction = 3, 
		RULE_assumeAction = 4, RULE_assignAction = 5, RULE_assignLHS = 6, RULE_implyExpression = 7, 
		RULE_orExpr = 8, RULE_andExpr = 9, RULE_notExpr = 10, RULE_eqExpr = 11, 
		RULE_eqOperator = 12, RULE_relationExpr = 13, RULE_relationOperator = 14, 
		RULE_additiveExpr = 15, RULE_additiveOperator = 16, RULE_multiplicativeExpr = 17, 
		RULE_multiplicativeOperator = 18, RULE_negExpr = 19, RULE_primaryExpr = 20, 
		RULE_parenExpr = 21, RULE_prime = 22, RULE_variableDeclaration = 23, RULE_value = 24, 
		RULE_literal = 25, RULE_reference = 26, RULE_typeName = 27, RULE_customType = 28, 
		RULE_typeDeclaration = 29, RULE_typeLiteral = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"xsts", "action", "nonDetAction", "sequentialAction", "assumeAction", 
			"assignAction", "assignLHS", "implyExpression", "orExpr", "andExpr", 
			"notExpr", "eqExpr", "eqOperator", "relationExpr", "relationOperator", 
			"additiveExpr", "additiveOperator", "multiplicativeExpr", "multiplicativeOperator", 
			"negExpr", "primaryExpr", "parenExpr", "prime", "variableDeclaration", 
			"value", "literal", "reference", "typeName", "customType", "typeDeclaration", 
			"typeLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'choice'", "'or'", "';'", "'assume'", "'&&'", "'||'", "'->'", 
			"'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'('", "')'", "'''", "':='", "'='", "'var'", "'integer'", 
			"'boolean'", "':'", "','", "'type'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CHOICE", "NONDET_OR", "SEMICOLON", "ASSUME", "AND", "OR", "IMPLIES", 
			"NOT", "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ", "PLUS", "MINUS", "MUL", 
			"DIV", "MOD", "LPAREN", "RPAREN", "PRIME", "ASSIGN", "EQUALS", "VAR", 
			"INT", "BOOL", "DP", "COMMA", "TYPE", "LCURLY", "RCURLY", "INTLIT", "BOOLLIT", 
			"ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XSTSGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XSTSGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class XstsContext extends ParserRuleContext {
		public TypeDeclarationContext typeDeclaration;
		public List<TypeDeclarationContext> typeDeclarations = new ArrayList<TypeDeclarationContext>();
		public VariableDeclarationContext variableDeclaration;
		public List<VariableDeclarationContext> variableDeclarations = new ArrayList<VariableDeclarationContext>();
		public NonDetActionContext transitions;
		public NonDetActionContext initAction;
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<NonDetActionContext> nonDetAction() {
			return getRuleContexts(NonDetActionContext.class);
		}
		public NonDetActionContext nonDetAction(int i) {
			return getRuleContext(NonDetActionContext.class,i);
		}
		public XstsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xsts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterXsts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitXsts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitXsts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XstsContext xsts() throws RecognitionException {
		XstsContext _localctx = new XstsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xsts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((XstsContext)_localctx).typeDeclaration = typeDeclaration();
			((XstsContext)_localctx).typeDeclarations.add(((XstsContext)_localctx).typeDeclaration);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(63);
				((XstsContext)_localctx).typeDeclaration = typeDeclaration();
				((XstsContext)_localctx).typeDeclarations.add(((XstsContext)_localctx).typeDeclaration);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			((XstsContext)_localctx).variableDeclaration = variableDeclaration();
			((XstsContext)_localctx).variableDeclarations.add(((XstsContext)_localctx).variableDeclaration);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(70);
				((XstsContext)_localctx).variableDeclaration = variableDeclaration();
				((XstsContext)_localctx).variableDeclarations.add(((XstsContext)_localctx).variableDeclaration);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			((XstsContext)_localctx).transitions = nonDetAction();
			setState(77);
			((XstsContext)_localctx).initAction = nonDetAction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public AssumeActionContext assumeAction() {
			return getRuleContext(AssumeActionContext.class,0);
		}
		public AssignActionContext assignAction() {
			return getRuleContext(AssignActionContext.class,0);
		}
		public NonDetActionContext nonDetAction() {
			return getRuleContext(NonDetActionContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_action);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSUME:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				assumeAction();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				assignAction();
				}
				break;
			case CHOICE:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				nonDetAction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonDetActionContext extends ParserRuleContext {
		public SequentialActionContext sequentialAction;
		public List<SequentialActionContext> choices = new ArrayList<SequentialActionContext>();
		public TerminalNode CHOICE() { return getToken(XSTSGrammarParser.CHOICE, 0); }
		public List<TerminalNode> LCURLY() { return getTokens(XSTSGrammarParser.LCURLY); }
		public TerminalNode LCURLY(int i) {
			return getToken(XSTSGrammarParser.LCURLY, i);
		}
		public List<TerminalNode> RCURLY() { return getTokens(XSTSGrammarParser.RCURLY); }
		public TerminalNode RCURLY(int i) {
			return getToken(XSTSGrammarParser.RCURLY, i);
		}
		public List<SequentialActionContext> sequentialAction() {
			return getRuleContexts(SequentialActionContext.class);
		}
		public SequentialActionContext sequentialAction(int i) {
			return getRuleContext(SequentialActionContext.class,i);
		}
		public List<TerminalNode> NONDET_OR() { return getTokens(XSTSGrammarParser.NONDET_OR); }
		public TerminalNode NONDET_OR(int i) {
			return getToken(XSTSGrammarParser.NONDET_OR, i);
		}
		public NonDetActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonDetAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterNonDetAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitNonDetAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitNonDetAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NonDetActionContext nonDetAction() throws RecognitionException {
		NonDetActionContext _localctx = new NonDetActionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nonDetAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(CHOICE);
			setState(85);
			match(LCURLY);
			setState(86);
			((NonDetActionContext)_localctx).sequentialAction = sequentialAction();
			((NonDetActionContext)_localctx).choices.add(((NonDetActionContext)_localctx).sequentialAction);
			setState(87);
			match(RCURLY);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NONDET_OR) {
				{
				{
				setState(88);
				match(NONDET_OR);
				setState(89);
				match(LCURLY);
				setState(90);
				((NonDetActionContext)_localctx).sequentialAction = sequentialAction();
				((NonDetActionContext)_localctx).choices.add(((NonDetActionContext)_localctx).sequentialAction);
				setState(91);
				match(RCURLY);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SequentialActionContext extends ParserRuleContext {
		public ActionContext action;
		public List<ActionContext> actions = new ArrayList<ActionContext>();
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public SequentialActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequentialAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterSequentialAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitSequentialAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitSequentialAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SequentialActionContext sequentialAction() throws RecognitionException {
		SequentialActionContext _localctx = new SequentialActionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sequentialAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((SequentialActionContext)_localctx).action = action();
			((SequentialActionContext)_localctx).actions.add(((SequentialActionContext)_localctx).action);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHOICE) | (1L << ASSUME) | (1L << ID))) != 0)) {
				{
				{
				setState(99);
				((SequentialActionContext)_localctx).action = action();
				((SequentialActionContext)_localctx).actions.add(((SequentialActionContext)_localctx).action);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssumeActionContext extends ParserRuleContext {
		public ImplyExpressionContext cond;
		public TerminalNode ASSUME() { return getToken(XSTSGrammarParser.ASSUME, 0); }
		public TerminalNode SEMICOLON() { return getToken(XSTSGrammarParser.SEMICOLON, 0); }
		public ImplyExpressionContext implyExpression() {
			return getRuleContext(ImplyExpressionContext.class,0);
		}
		public AssumeActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assumeAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterAssumeAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitAssumeAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitAssumeAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssumeActionContext assumeAction() throws RecognitionException {
		AssumeActionContext _localctx = new AssumeActionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assumeAction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(ASSUME);
			setState(106);
			((AssumeActionContext)_localctx).cond = implyExpression();
			setState(107);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignActionContext extends ParserRuleContext {
		public AssignLHSContext lhs;
		public ImplyExpressionContext rhs;
		public TerminalNode ASSIGN() { return getToken(XSTSGrammarParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(XSTSGrammarParser.SEMICOLON, 0); }
		public AssignLHSContext assignLHS() {
			return getRuleContext(AssignLHSContext.class,0);
		}
		public ImplyExpressionContext implyExpression() {
			return getRuleContext(ImplyExpressionContext.class,0);
		}
		public AssignActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterAssignAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitAssignAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitAssignAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignActionContext assignAction() throws RecognitionException {
		AssignActionContext _localctx = new AssignActionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignAction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			((AssignActionContext)_localctx).lhs = assignLHS();
			setState(110);
			match(ASSIGN);
			setState(111);
			((AssignActionContext)_localctx).rhs = implyExpression();
			setState(112);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignLHSContext extends ParserRuleContext {
		public Token name;
		public TerminalNode ID() { return getToken(XSTSGrammarParser.ID, 0); }
		public List<TerminalNode> PRIME() { return getTokens(XSTSGrammarParser.PRIME); }
		public TerminalNode PRIME(int i) {
			return getToken(XSTSGrammarParser.PRIME, i);
		}
		public AssignLHSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignLHS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterAssignLHS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitAssignLHS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitAssignLHS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignLHSContext assignLHS() throws RecognitionException {
		AssignLHSContext _localctx = new AssignLHSContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignLHS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((AssignLHSContext)_localctx).name = match(ID);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PRIME) {
				{
				{
				setState(115);
				match(PRIME);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplyExpressionContext extends ParserRuleContext {
		public OrExprContext orExpr;
		public List<OrExprContext> ops = new ArrayList<OrExprContext>();
		public List<OrExprContext> orExpr() {
			return getRuleContexts(OrExprContext.class);
		}
		public OrExprContext orExpr(int i) {
			return getRuleContext(OrExprContext.class,i);
		}
		public TerminalNode IMPLIES() { return getToken(XSTSGrammarParser.IMPLIES, 0); }
		public ImplyExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implyExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterImplyExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitImplyExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitImplyExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplyExpressionContext implyExpression() throws RecognitionException {
		ImplyExpressionContext _localctx = new ImplyExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_implyExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			((ImplyExpressionContext)_localctx).orExpr = orExpr();
			((ImplyExpressionContext)_localctx).ops.add(((ImplyExpressionContext)_localctx).orExpr);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLIES) {
				{
				setState(122);
				match(IMPLIES);
				setState(123);
				((ImplyExpressionContext)_localctx).orExpr = orExpr();
				((ImplyExpressionContext)_localctx).ops.add(((ImplyExpressionContext)_localctx).orExpr);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrExprContext extends ParserRuleContext {
		public AndExprContext andExpr;
		public List<AndExprContext> ops = new ArrayList<AndExprContext>();
		public List<AndExprContext> andExpr() {
			return getRuleContexts(AndExprContext.class);
		}
		public AndExprContext andExpr(int i) {
			return getRuleContext(AndExprContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(XSTSGrammarParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(XSTSGrammarParser.OR, i);
		}
		public OrExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterOrExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitOrExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitOrExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrExprContext orExpr() throws RecognitionException {
		OrExprContext _localctx = new OrExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_orExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			((OrExprContext)_localctx).andExpr = andExpr();
			((OrExprContext)_localctx).ops.add(((OrExprContext)_localctx).andExpr);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(127);
				match(OR);
				setState(128);
				((OrExprContext)_localctx).andExpr = andExpr();
				((OrExprContext)_localctx).ops.add(((OrExprContext)_localctx).andExpr);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndExprContext extends ParserRuleContext {
		public NotExprContext notExpr;
		public List<NotExprContext> ops = new ArrayList<NotExprContext>();
		public List<NotExprContext> notExpr() {
			return getRuleContexts(NotExprContext.class);
		}
		public NotExprContext notExpr(int i) {
			return getRuleContext(NotExprContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(XSTSGrammarParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(XSTSGrammarParser.AND, i);
		}
		public AndExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).enterAndExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XSTSGrammarListener ) ((XSTSGrammarListener)listener).exitAndExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XSTSGrammarVisitor ) return ((XSTSGrammarVisitor<? extends T>)visitor).visitAndExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndExprContext andExpr() throws RecognitionException {
		AndExprContext _localctx = new AndExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_andExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			((AndExprContext)_localctx).notExpr = notExpr();
			((AndExprContext)_localctx).ops.add(((AndExprContext)_localctx).notExpr);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(135);
				match(AND);
				setState(136);
				((AndExprContext)_localctx).notExpr = notExpr();
				((AndExprContext)_localctx).ops.add(((AndExprContext)_localctx).notExpr);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
